# glimepiride-model

./: .zenodo.json  Dockerfile  Dockerfile.md  README.md  TODO  glimepiride_model.omex  pyproject.toml
.github/workflows/: docker.yml  python.yml
fit/20250131_134555__239b7/GLIMEPIRIDE_LSQ_CYP2C9/: index.html  optimization_result.json  optimization_result.tsv  report.txt
fit/20250410_143850__6baa2/GLIMEPIRIDE_LSQ_CYP2C9/: index.html  optimization_result.tsv  report.txt
models/: glimepiride_body.md  glimepiride_body.xml  glimepiride_body_flat.md  glimepiride_body_flat.xml  glimepiride_intestine.md  glimepiride_intestine.xml  glimepiride_kidney.md  glimepiride_kidney.xml  glimepiride_liver.md  glimepiride_liver.xml  glimepiride_model.omex
release-notes/: 0.5.0.md  0.5.1.md  0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md
simulation/all/: index.html
simulation/all/Ahmed2016/: Ahmed2016.html  Ahmed2016.json  Ahmed2016_glimepiride_GLI3.tsv
simulation/all/Badian1994/: Badian1994.html  Badian1994.json  Badian1994_M1+M2_GLI1iv.tsv  Badian1994_M1+M2_GLI1po.tsv  Badian1994_glimepiride-M1_GLI1iv.tsv  Badian1994_glimepiride-M1_GLI1po.tsv  Badian1994_glimepiride-M2_GLI1iv.tsv  Badian1994_glimepiride-M2_GLI1po.tsv  Badian1994_glimepiride_GLI1iv.tsv  Badian1994_glimepiride_GLI1po.tsv  Badian1994_glimepiride_urine-M1+M2_GLI1iv.tsv  Badian1994_glimepiride_urine-M1+M2_GLI1po.tsv  Badian1994_glimepiride_urine-M1_GLI1iv.tsv  Badian1994_glimepiride_urine-M1_GLI1po.tsv  Badian1994_glimepiride_urine-M2_GLI1iv.tsv  Badian1994_glimepiride_urine-M2_GLI1po.tsv  Badian1994_recovery-M1+M2_GLI1iv.tsv  Badian1994_recovery-M1+M2_GLI1po.tsv
simulation/all/Badian1996/: Badian1996.html  Badian1996.json  Badian1996_M1+M2.tsv  Badian1996_glimepiride-M1+M2_recovery.tsv  Badian1996_glimepiride-M1+M2_urine.tsv  Badian1996_glimepiride-M1.tsv  Badian1996_glimepiride-M1_urine.tsv  Badian1996_glimepiride-M2.tsv  Badian1996_glimepiride-M2_urine.tsv
simulation/all/Choi2014/: Choi2014.html  Choi2014.json  Choi2014_glimepiride-M1_GLI4, GEM50.tsv  (+3 more)
(+364 files in other folders)
